tests/compile_error/assign_uninitialized.xprshn
// Compile error: assignment from uninitialized variable
int a!
int b!
a = b! // 'b' is uninitialized 